# adventofcode

./: .clang-format  Makefile  README.md
c/: .gitignore  CMakeLists.txt  Makefile
c/src/: CMakeLists.txt  aoc.h  main.c
c/src/aoc_2015/: aoc_2015.h  day1.c  day2.c
c/src/aocslns/: CMakeLists.txt  aocdefs.h  aocslns.c  aocslns.h
c/src/aocslns/aoc_2015/: CMakeLists.txt  aoc_2015.h  aoc_fns.c  day1.c  day2.c
c/tests/: CMakeLists.txt  bench_aoc.cpp  test_aoc.cpp
cpp/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile
cpp/src/: CMakeLists.txt  aoc.h  main.cpp
cpp/src/aoc_2015/: CMakeLists.txt  aoc_2015.h  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp
cpp/src/aoc_2019/: CMakeLists.txt  day1.cpp
cpp/src/util/: CMakeLists.txt  util.cpp  util.h
cpp/tests/: CMakeLists.txt  CMakeLists.txt.in  bench_aoc.cpp  test_aoc.cpp
python/: .gitignore  requirements.txt  setup.py  tox.ini
python/adventofcode/: __init__.py  __main__.py
python/adventofcode/aoc_2015/: __init__.py  day1.py  day2.py
python/tests/: test_aoc_2015.py
rust/: .gitignore  Cargo.toml
rust/advent-of-code-data-rs/: Cargo.toml
rust/advent-of-code-data-rs/src/: lib.rs
rust/advent-of-code-data-rs/src/advent-of-code-data/: README.md  get_inputs.sh
rust/advent-of-code-rs/: Cargo.toml
rust/advent-of-code-rs/.cargo/: config
rust/advent-of-code-rs/benches/: aoc_benches.rs
rust/advent-of-code-rs/src/: lib.rs  macros.rs  main.rs  traits.rs  utils.rs
rust/advent-of-code-rs/src/aoc_2015/: day1.rs  day2.rs  mod.rs
rust/advent-of-code-rs/src/aoc_2016/: mod.rs
rust/advent-of-code-rs/src/aoc_2017/: mod.rs
rust/advent-of-code-rs/src/aoc_2018/: mod.rs
rust/advent-of-code-rs/src/aoc_2019/: mod.rs
rust/advent-of-code-rs/src/aoc_2020/: mod.rs
rust/advent-of-code-rs/src/aoc_2021/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
rust/advent-of-code-rs/src/utils/: asciibuf.rs  circularbuf.rs  mod.rs
rust/aocdata/: Cargo.toml  build.rs  cbindgen.toml
rust/aocdata/src/: lib.rs
